// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ViewHeader /> should render renders children 1`] = `
<ViewHeader__StyledViewHeader>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      test-child
    </title>
  </HelmetWrapper>
  <div>
    Hello world
  </div>
</ViewHeader__StyledViewHeader>
`;

exports[`<ViewHeader /> should render with count 1`] = `
<ViewHeader__StyledViewHeader>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Foo
    </title>
  </HelmetWrapper>
</ViewHeader__StyledViewHeader>
`;

exports[`<ViewHeader /> should render with title 1`] = `
<ViewHeader__StyledViewHeader>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Foo
    </title>
  </HelmetWrapper>
</ViewHeader__StyledViewHeader>
`;
